Sat May 30 08:36:04 2015  Eric Wong  <e@80x24.org>

	* variable.c (static int special_generic_ivar): move
	  (rb_generic_ivar_table): rewrite for compatibility
	  (gen_ivtbl_bytes): new function
	  (generic_ivar_get): update to use ivar index
	  (generic_ivar_update): ditto
	  (generic_ivar_set): ditto
	  (generic_ivar_defined): ditto
	  (generic_ivar_remove): ditto
	  (rb_mark_generic_ivar): ditto
	  (givar_i): ditto
	  (rb_free_generic_ivar): ditto
	  (rb_mark_generic_ivar_tbl): ditto
	  (rb_generic_ivar_memsize): ditto
	  (rb_copy_generic_ivar): ditto
	  (rb_ivar_set): ditto
	  (rb_ivar_foreach): ditto
	  (rb_ivar_count): ditto
	  (givar_mark_i): remove
	  (gen_ivtbl_mark): new function
	  (gen_ivar_each): ditto
	  (iv_index_tbl_extend): update for struct ivar_update
	  (iv_index_tbl_newsize): ditto
	  [ruby-core:69323] [Feature #11170]

Sat May 30 08:10:46 2015  Eric Wong  <e@80x24.org>

	* variable.c (iv_index_tbl_make): extract from rb_ivar_set
	  (iv_index_tbl_extend): ditto
	  (iv_index_tbl_newsize): ditto
	  (rb_ivar_set): use extracted functions
	  [ruby-core:69323] (Part 1)

Fri May 29 17:39:14 2015  Koichi Sasada  <ko1@atdot.net>

	* tool/make_hgraph.rb: added.

Fri May 29 14:39:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): out of range NTH_REF is always
	  nil.

	* parse.y (parse_numvar): check overflow of NTH_REF and range.
	  [ruby-core:69393] [Bug #11192]

	* util.c (ruby_scan_digits): make public and add length parameter.

Fri May 29 11:18:58 2015  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_sendmsg_internal,
	  bsock_recvmsg_internal):
	  avoid redundant fcntl on Linux
	  [ruby-core:69154] [Feature #11145]
	* ext/socket/init.c (rsock_s_recvfrom_nonblock): ditto
	* ext/socket/rubysocket.h (MSG_DONTWAIT_RELIABLE): new macro

Fri May 29 10:30:34 2015  Eric Wong  <e@80x24.org>

	* lib/net/resolv.rb (request): use monotonic clock
	* lib/net/http.rb (begin_transport, end_transport): ditto